# image2ppt-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: api.md  api.zh.md
python/: README.md  pyproject.toml
python/examples/: quickstart.py  step_by_step.py
python/src/image2ppt/: __init__.py  _compress.py  client.py  errors.py  models.py
python/tests/: test_client.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/examples/: quickstart.ts  step_by_step.ts
typescript/src/: client.ts  errors.ts  index.ts  types.ts
typescript/test/: client.test.ts
